# Text-to-SQL-AWS-Athena-AgentCore-FastAPI-for-Banking-App-using-Spec-Driven-Development-by-AWS-Kiro

./: README.md
chatbot/: __init__.py  pyproject.toml
chatbot/agent/: Dockerfile  graph.py  state.py
chatbot/api/: Dockerfile  __init__.py  auth.py  circuit_breaker.py  errors.py  main.py  middleware.py  models.py  rate_limiter.py
chatbot/docs/: Athena_Chatbot_Architect_Guide.md  Athena_Chatbot_Developer_Guide.md  Athena_Chatbot_User_Guide.md  convert_html.py  data-population-cli-guide.md  hands-on-guide.html  hands-on-guide.md  kiro-course.html  kiro-course.md
chatbot/infra/: __init__.py  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
chatbot/mcp_server/: __init__.py  server.py  validation.py
chatbot/policies/: __init__.py  analysts.cedar  base.cedar  evaluator.py  kill_switch.cedar  managers.cedar  schema.cedarschema
chatbot/scripts/: __init__.py  audit.py  deprovisioning.py  kill_switch.py  reconciliation.py  reindex_vectors.py
chatbot/tests/: __init__.py  test_agent_graph.py  test_agent_nodes.py  test_audit_store.py  test_auth.py  test_cedar_integration.py  test_circuit_breaker.py  test_content_safety.py  test_deprovisioning.py  test_error_handling.py  test_guardrails_unit.py  test_integration_e2e.py  test_kill_switch.py  test_list_tables_get_schema.py  test_mcp_server.py  test_mcp_tools_security.py  test_middleware.py  test_models.py  test_property_audit_completeness.py  test_property_authorization.py  test_property_bounded_loops_gateway.py  test_property_deprovisioning_sla.py  test_property_guardrails_coverage.py  (+10 more)
(+35 files in other folders)
